Search bar working

--- a/SDCEventTracker/SDCEventTracker.csproj
+++ b/SDCEventTracker/SDCEventTracker.csproj
@@ -335,9 +335,11 @@
     <Content Include="Views\Home\Competitions.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Boolean.cshtml" />
+    <Content Include="Views\Home\EventDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
     <Folder Include="Database\Models\" />
   </ItemGroup>
   <ItemGroup>
