--- a/SDCEventTracker/bin/SDCEventTracker.dll.config
+++ b/SDCEventTracker/bin/SDCEventTracker.dll.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SDCEventTracker-20140712015544.mdf;Initial Catalog=aspnet-SDCEventTracker-20140712015544;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SDCEventTrackerContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=SDCEventTrackerContext-20140713034007; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SDCEventTrackerContext-20140713034007.mdf" providerName="System.Data.SqlClient" />
-  <add name="SDC_databaseEntities" connectionString="metadata=res://*/Models.DatabaseModel.csdl|res://*/Models.DatabaseModel.ssdl|res://*/Models.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=SDC_database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="SDC_databaseEntities" connectionString="metadata=res://*/Models.DatabaseModel.csdl|res://*/Models.DatabaseModel.ssdl|res://*/Models.DatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=SDC_database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SDC_databaseEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=SDC_database;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
