ignore file changed

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ SDCEventTracker/obj/Debug/SDCEventTracker.csproj.FileListAbsolute.txt
 SDCEventTracker/obj/Debug/SDCEventTracker.csprojResolveAssemblyReference.cache
 SDCEventTracker/obj/Debug/SDCEventTracker.dll
 SDCEventTracker/obj/Debug/SDCEventTracker.pdb
+SDCEventTracker.v12.suo
