Splitting tables for each Event is working. The event name is also displayed at the top of the table.

--- a/SDCEventTracker/SDCEventTracker.csproj
+++ b/SDCEventTracker/SDCEventTracker.csproj
@@ -194,6 +194,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ADOEntityDataModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\AllResults.cs" />
     <Compile Include="Models\Dog.cs">
       <DependentUpon>ADOEntityDataModel.tt</DependentUpon>
     </Compile>
